--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Ivana Tijanic || ivana.tijanic@gmail.com">
     <meta name="theme-color" content="#fafafa">
     <link rel="shortcut icon" href="./assets//images/favicon/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="./assets/images/favicon/apple-touch-icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Časovi nemačkog jezika</title>
@@ -77,10 +78,6 @@
                 </div>
             </div>
         </div>
-        <a href="#explanation" class="down-img">
-            <img src="./assets/images/down-arrow.png" alt="priprema za ispit Gete" width="32" height="32">
-
-        </a>
     </section>
 
     <section class="explanation" id="explanation">
