--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
         <div class="wrapper">
             <div>
                 <h1 class="title">Časovi nemačkog jezika preko skype-a i uživo</h1>
-                <img src="./assets/images/german-girl.svg" alt="">
-
+                <img src="./assets/images/german-girl.svg" alt="Priprema za polaganje ispita na Gete institutu" width="auto" class="img-mob">
             </div>
             <div class="wrapper-item">
                 <h2 class="subtitle">Časovi nemačkog jezika za lekare, medicinske radnike, studente medicine kao i sve
@@ -63,15 +62,14 @@
                     koji žele da nauče nemački jezik i ovladaju veštinama govora, čitanja i pisanja.
                 </h2>
                 <div class="contact-wrapper">
-
                     <div class="contact">
                         <img src="./assets/images/icons/email.svg" alt="Časovi nemačkog jezika preko skype-a i uživo"
-                            width="22">
+                            width="22" />
                         <a href="mailto:ivanacvetkovic011@gmail.com" class="contact-link">
                             ivanacvetkovic011@gmail.com</a>
                     </div>
                     <div class="contact">
-                        <img src="./assets/images/icons/phone.svg" alt="" width="22"> <a href="tel:+381621960072"
+                        <img src="./assets/images/icons/phone.svg" alt="Priprema za ispit Gete,Telc,ÖSD,FSP" width="22" /> <a href="tel:+381621960072"
                             class="contact-link">
                             063 835 32 76</a>
                     </div>
