--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="./assets//images/favicon/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="./assets/images/favicon/apple-touch-icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="style.css">
     <title>Časovi nemačkog jezika</title>
 </head>
