--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="contact">
                         <img src="./assets/images/icons/email.svg" alt="Časovi nemačkog jezika preko skype-a i uživo"
                             width="22">
-                        <a href="mailto:ivanacvetkovic011@gmail.com" class="contact-link">
+                        <a  class="contact-link">
                             ivanacvetkovic011@gmail.com</a>
                     </div>
                     <div class="contact">
@@ -67,7 +67,7 @@
                     <div class="contact">
                         <img src="./assets/images/icons/email.svg" alt="Časovi nemačkog jezika preko skype-a i uživo"
                             width="24" height="22" />
-                        <a href="mailto:ivanacvetkovic011@gmail.com" class="contact-link">
+                        <a  class="contact-link">
                             ivanacvetkovic011@gmail.com</a>
                     </div>
                     <div class="contact">
