added responsive mob style

--- a/index.html
+++ b/index.html
@@ -31,12 +31,11 @@
                     <div class="contact">
                         <img src="./assets/images/icons/email.svg" alt="Časovi nemačkog jezika preko skype-a i uživo"
                             width="22">
-                        <a  class="contact-link">
+                        <a class="contact-link">
                             ivanacvetkovic011@gmail.com</a>
                     </div>
                     <div class="contact">
-                        <img src="./assets/images/icons/phone.svg" alt="" width="22"> <a href="tel:+381621960072"
-                            class="contact-link">
+                        <img src="./assets/images/icons/phone.svg" alt="" width="22"> <a href="#" class="contact-link">
                             063 835 32 76</a>
                     </div>
                 </div>
@@ -67,12 +66,12 @@
                     <div class="contact">
                         <img src="./assets/images/icons/email.svg" alt="Časovi nemačkog jezika preko skype-a i uživo"
                             width="24" height="22" />
-                        <a  class="contact-link">
+                        <a class="contact-link">
                             ivanacvetkovic011@gmail.com</a>
                     </div>
                     <div class="contact">
                         <img src="./assets/images/icons/phone.svg" alt="Priprema za ispit Gete,Telc,ÖSD,FSP" width="22"
-                            height="22" /> <a href="tel:+381621960072" class="contact-link">
+                            height="22" /> <a href="#" class="contact-link">
                             063 835 32 76</a>
                     </div>
                 </div>
@@ -127,12 +126,12 @@
             <div class="contact">
                 <img src="./assets/images/icons/email.svg" alt="Časovi nemačkog jezika preko skype-a i uživo" width="24"
                     height="22" />
-                <a href="mailto:ivanacvetkovic011@gmail.com" class="contact-link">
+                <a class="contact-link">
                     ivanacvetkovic011@gmail.com</a>
             </div>
             <div class="contact">
                 <img src="./assets/images/icons/phone.svg" alt="Priprema za ispit Gete,Telc,ÖSD,FSP" width="22"
-                    height="22" /> <a href="tel:+381621960072" class="contact-link">
+                    height="22" /> <a href="#" class="contact-link">
                     063 835 32 76</a>
             </div>
         </div>
