--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description"
-        content="Časovi nemačkog jezika preko skype-a i uživo. Priprema za ispit Gete,Telc,ÖSD,FSP">
-    <meta name="keywords" content="Gete,Telc,ÖSD,FSP,Časovi nemačkog">
-    <meta name="author" content="Ivana Tijanic || ivana.tijanic@gmail.com">
-    <meta name="theme-color" content="#fafafa">
-    <link rel="shortcut icon" href="./assets//images/favicon/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="./assets/images/favicon/apple-touch-icon.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="style.css">
+        content="Časovi nemačkog jezika preko skype-a i uživo. Priprema za ispit Gete,Telc,ÖSD,FSP" />
+    <meta name="keywords" content="Gete,Telc,ÖSD,FSP,Časovi nemačkog" />
+    <meta name="author" content="Ivana Tijanic || ivana.tijanic@gmail.com" />
+    <meta name="theme-color" content="#fafafa" />
+    <link rel="shortcut icon" href="./assets//images/favicon/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="./assets/images/favicon/apple-touch-icon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="stylesheet" href="style.css" />
     <title>Časovi nemačkog jezika</title>
 </head>
 
@@ -22,32 +22,27 @@
         <div class="wrapper">
             <div class="wrapper-item">
                 <h1 class="title">Časovi nemačkog jezika preko skype-a i uživo</h1>
-                <h2 class="subtitle">Časovi nemačkog jezika za lekare, medicinske radnike, studente medicine kao i sve
-                    druge
-                    koji žele da nauče nemački jezik i ovladaju veštinama govora, čitanja i pisanja.
+                <h2 class="subtitle">
+                    Časovi nemačkog jezika za lekare, medicinske radnike, studente medicine kao i sve druge koji žele da
+                    nauče
+                    nemački jezik i ovladaju veštinama govora, čitanja i pisanja.
                 </h2>
                 <div class="contact-wrapper">
-
                     <div class="contact">
                         <img src="./assets/images/icons/email.svg" alt="Časovi nemačkog jezika preko skype-a i uživo"
-                            width="22">
-                        <a class="contact-link">
-                            ivanacvetkovic011@gmail.com</a>
+                            width="22" />
+                        <a class="contact-link"> ivanacvetkovic011@gmail.com</a>
                     </div>
                     <div class="contact">
-                        <img src="./assets/images/icons/phone.svg" alt="" width="22"> <a href="#" class="contact-link">
-                            063 835 32 76</a>
+                        <img src="./assets/images/icons/phone.svg" alt="" width="22" />
+                        <a href="#" class="contact-link"> 063 835 32 76</a>
                     </div>
                 </div>
-
-
             </div>
-            <img src="./assets/images/german-girl.svg" alt="">
-
+            <img src="./assets/images/german-girl.svg" alt="" />
         </div>
         <a href="#explanation" class="down-img">
-            <img src="./assets/images/down-arrow.png" alt="priprema za ispit Gete" width="32" height="32">
-
+            <img src="./assets/images/down-arrow.png" alt="priprema za ispit Gete" width="32" height="32" />
         </a>
     </section>
     <section class="section-hero mob">
@@ -55,55 +50,54 @@
             <div>
                 <h1 class="title">Časovi nemačkog jezika preko skype-a i uživo</h1>
                 <img src="./assets/images/german-girl.svg" alt="Priprema za polaganje ispita na Gete institutu"
-                    width="auto" height="auto" class="img-mob">
+                    width="auto" height="auto" class="img-mob" />
             </div>
             <div class="wrapper-item">
-                <h2 class="subtitle">Časovi nemačkog jezika za lekare, medicinske radnike, studente medicine kao i sve
-                    druge
-                    koji žele da nauče nemački jezik i ovladaju veštinama govora, čitanja i pisanja.
+                <h2 class="subtitle">
+                    Časovi nemačkog jezika za lekare, medicinske radnike, studente medicine kao i sve druge koji žele da
+                    nauče
+                    nemački jezik i ovladaju veštinama govora, čitanja i pisanja.
                 </h2>
                 <div class="contact-wrapper">
                     <div class="contact">
                         <img src="./assets/images/icons/email.svg" alt="Časovi nemačkog jezika preko skype-a i uživo"
                             width="24" height="22" />
-                        <a class="contact-link">
-                            ivanacvetkovic011@gmail.com</a>
+                        <a class="contact-link"> ivanacvetkovic011@gmail.com</a>
                     </div>
                     <div class="contact">
                         <img src="./assets/images/icons/phone.svg" alt="Priprema za ispit Gete,Telc,ÖSD,FSP" width="22"
-                            height="22" /> <a href="#" class="contact-link">
-                            063 835 32 76</a>
+                            height="22" />
+                        <a href="#" class="contact-link"> 063 835 32 76</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
     <section class="explanation" id="explanation">
         <h2 class="title">Nudimo vam</h2>
         <div class="explain-wrapper">
             <div class="explain-item">
-                <img src="./assets/images/germany.png" alt="" width="32" height="32">
-                <p>Priprema za polaganje ispita :<br />
+                <img src="./assets/images/germany.png" alt="" width="32" height="32" />
+                <p>
+                    Priprema za polaganje ispita :<br />
                     - na Gete institutu (A1, A2, B1, B2, C1, konverzacija),<br />
                     - ispite ÖSD,<br />
                     - DaF,<br />
                     - Telc,<br />
                     - Telc MedizinB1-B2
                 </p>
-
             </div>
             <div class="explain-item">
-                <img src="./assets/images/book.svg" alt="" width="32" height="32">
-
-                <p>Posebna paznja se posvećuje pripremi za 4 modula ispita, svaki modul se temeljno obradjuje i uvežbava
-                    kroz primere iz prethodnih testova. Program se prilagođava svakom učeniku pojedinačno, prema cilju
+                <img src="./assets/images/book.svg" alt="" width="32" height="32" />
+                <p>
+                    Posebna paznja se posvećuje pripremi za 4 modula ispita, svaki modul se temeljno obradjuje i
+                    uvežbava kroz
+                    primere iz prethodnih testova. Program se prilagođava svakom učeniku pojedinačno, prema cilju
                     učenja.
                 </p>
             </div>
-
             <div class="explain-item">
-                <img src="./assets/images/facetoface.svg" alt="" width="32" height="32">
+                <img src="./assets/images/facetoface.svg" alt="" width="32" height="32" />
 
                 <p>Knjige i dodatni materijal za ispite učenici dobijaju u elektronskoj formi.</p>
             </div>
@@ -113,31 +107,27 @@
         <div>
             <p>
                 Savremene metode učenja i aktuelne teme za konverzaciju nateraće vas da brzo progovorite nemački jezik i
-                primenite ga u svakodnevnom životu.
-                Duži boravak u Nemačkoj, višegodišnje iskustvo u radu i visok kvalitet časova doprineće da progovorite
-                na ovom predivnom stranom jeziku!
+                primenite ga u svakodnevnom životu. Duži boravak u Nemačkoj, višegodišnje iskustvo u radu i visok
+                kvalitet
+                časova doprineće da progovorite na ovom predivnom stranom jeziku!
             </p>
         </div>
     </section>
     <section class="price">
         <h2 class="title">Pozovite i zakažite Vaš prvi čas</h2>
-
         <div class="price-wrapper">
             <div class="contact">
                 <img src="./assets/images/icons/email.svg" alt="Časovi nemačkog jezika preko skype-a i uživo" width="24"
                     height="22" />
-                <a class="contact-link">
-                    ivanacvetkovic011@gmail.com</a>
+                <a class="contact-link"> ivanacvetkovic011@gmail.com</a>
             </div>
             <div class="contact">
                 <img src="./assets/images/icons/phone.svg" alt="Priprema za ispit Gete,Telc,ÖSD,FSP" width="22"
-                    height="22" /> <a href="#" class="contact-link">
-                    063 835 32 76</a>
+                    height="22" />
+                <a href="#" class="contact-link"> 063 835 32 76</a>
             </div>
         </div>
-
     </section>
     <script src="main.js"></script>
 </body>
-
 </html>
