--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         content="Časovi nemačkog jezika preko skype-a i uživo. Priprema za ispit Gete,Telc,ÖSD,FSP" />
     <meta name="keywords" content="Gete,Telc,ÖSD,FSP,Časovi nemačkog" />
     <meta name="author" content="Ivana Tijanic || ivana.tijanic@gmail.com" />
+    <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#fafafa" />
     <link rel="shortcut icon" href="./assets//images/favicon/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="./assets/images/favicon/apple-touch-icon.png" />
@@ -30,16 +31,16 @@
                 <div class="contact-wrapper">
                     <div class="contact">
                         <img src="./assets/images/icons/email.svg" alt="Časovi nemačkog jezika preko skype-a i uživo"
-                            width="22" />
+                            width="22" height="22" />
                         <a class="contact-link"> ivanacvetkovic011@gmail.com</a>
                     </div>
                     <div class="contact">
-                        <img src="./assets/images/icons/phone.svg" alt="" width="22" />
+                        <img src="./assets/images/icons/phone.svg" alt="Gete,Telc,ÖSD,FSP" width="22" height="22s" />
                         <a href="#" class="contact-link"> 063 835 32 76</a>
                     </div>
                 </div>
             </div>
-            <img src="./assets/images/german-girl.svg" alt="" />
+            <img src="./assets/images/german-girl.svg" alt="ivana nemacki" width="auto" height="auto" />
         </div>
         <a href="#explanation" class="down-img">
             <img src="./assets/images/down-arrow.png" alt="priprema za ispit Gete" width="32" height="32" />
@@ -77,7 +78,7 @@
         <h2 class="title">Nudimo vam</h2>
         <div class="explain-wrapper">
             <div class="explain-item">
-                <img src="./assets/images/germany.png" alt="" width="32" height="32" />
+                <img src="./assets/images/germany.png" alt="ucenje nemackog jezika" width="32" height="32" />
                 <p>
                     Priprema za polaganje ispita :<br />
                     - na Gete institutu (A1, A2, B1, B2, C1, konverzacija),<br />
@@ -88,7 +89,7 @@
                 </p>
             </div>
             <div class="explain-item">
-                <img src="./assets/images/book.svg" alt="" width="32" height="32" />
+                <img src="./assets/images/book.svg" alt="ivana cvetkovic casovi nemackog" width="32" height="32" />
                 <p>
                     Posebna paznja se posvećuje pripremi za 4 modula ispita, svaki modul se temeljno obradjuje i
                     uvežbava kroz
@@ -97,7 +98,7 @@
                 </p>
             </div>
             <div class="explain-item">
-                <img src="./assets/images/facetoface.svg" alt="" width="32" height="32" />
+                <img src="./assets/images/facetoface.svg" alt="casovi nemackog prkeo skype" width="32" height="32" />
 
                 <p>Knjige i dodatni materijal za ispite učenici dobijaju u elektronskoj formi.</p>
             </div>
@@ -130,4 +131,5 @@
     </section>
     <script src="main.js"></script>
 </body>
+
 </html>
