--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="contact">
                         <img src="./assets/images/icons/email.svg" alt="Časovi nemačkog jezika preko skype-a i uživo"
                             width="22" height="22" />
-                        <a class="contact-link"> ivanacvetkovic011@gmail.com</a>
+                        <span class="contact-link"> ivanacvetkovic011@gmail.com</span>
                     </div>
                     <div class="contact">
                         <img src="./assets/images/icons/phone.svg" alt="Gete,Telc,ÖSD,FSP" width="22" height="22s" />
@@ -63,7 +63,7 @@
                     <div class="contact">
                         <img src="./assets/images/icons/email.svg" alt="Časovi nemačkog jezika preko skype-a i uživo"
                             width="24" height="22" />
-                        <a class="contact-link"> ivanacvetkovic011@gmail.com</a>
+                        <span class="contact-link"> ivanacvetkovic011@gmail.com</span>
                     </div>
                     <div class="contact">
                         <img src="./assets/images/icons/phone.svg" alt="Priprema za ispit Gete,Telc,ÖSD,FSP" width="22"
@@ -120,7 +120,7 @@
             <div class="contact">
                 <img src="./assets/images/icons/email.svg" alt="Časovi nemačkog jezika preko skype-a i uživo" width="24"
                     height="22" />
-                <a class="contact-link"> ivanacvetkovic011@gmail.com</a>
+                <span class="contact-link"> ivanacvetkovic011@gmail.com</span>
             </div>
             <div class="contact">
                 <img src="./assets/images/icons/phone.svg" alt="Priprema za ispit Gete,Telc,ÖSD,FSP" width="22"
