--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                 </div>
             </div>
-            <img src="./assets/images/german-girl.svg" alt="ivana nemacki" width="auto" height="auto" />
+            <img src="./assets/images/german-girl.svg" alt="ivana nemacki" width="2654.5" height="1729.6" class="img-girl" />
         </div>
         <a href="#explanation" class="down-img">
             <img src="./assets/images/down-arrow.png" alt="priprema za ispit Gete" width="32" height="32" />
@@ -51,7 +51,7 @@
             <div>
                 <h1 class="title">Časovi nemačkog jezika preko skype-a i uživo</h1>
                 <img src="./assets/images/german-girl.svg" alt="Priprema za polaganje ispita na Gete institutu"
-                    width="auto" height="auto" class="img-mob" />
+                    width="2654.5" height="1729.6" class="img-mob img-girl" />
             </div>
             <div class="wrapper-item">
                 <h2 class="subtitle">
