--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="Časovi nemačkog jezika preko skype-a i uživo. Priprema za ispit Gete,Telc,ÖSD,FSP" />
     <meta name="keywords" content="Gete,Telc,ÖSD,FSP,Časovi nemačkog" />
-    <meta name="author" content="Ivana Tijanic || ivana.tijanic@gmail.com" />
+    <meta name="author" content="Ivana Tijanic" />
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#fafafa" />
     <link rel="shortcut icon" href="./assets//images/favicon/favicon.ico" type="image/x-icon" />
@@ -32,25 +32,25 @@
                     <div class="contact">
                         <img src="./assets/images/icons/email.svg" alt="Časovi nemačkog jezika preko skype-a i uživo"
                             width="22" height="22" />
-                        <span class="contact-link"> ivanacvetkovic011@gmail.com</span>
+                        <span class="contact-link"> example@example.com</span>
                     </div>
                     <div class="contact">
-                        <img src="./assets/images/icons/phone.svg" alt="Gete,Telc,ÖSD,FSP" width="22" height="22s" />
-                        <a href="#" class="contact-link"> 063 835 32 76</a>
+                        <img src="./assets/images/icons/phone.svg" alt="" width="22" height="22s" />
+                        <a href="#" class="contact-link"> 060 000 00 00</a>
                     </div>
                 </div>
             </div>
-            <img src="./assets/images/german-girl.svg" alt="ivana nemacki" width="2654.5" height="1729.6" class="img-girl" />
+            <img src="./assets/images/german-girl.svg" alt="" width="2654.5" height="1729.6" class="img-girl" />
         </div>
         <a href="#explanation" class="down-img">
-            <img src="./assets/images/down-arrow.png" alt="priprema za ispit Gete" width="32" height="32" />
+            <img src="./assets/images/down-arrow.png" alt="" width="32" height="32" />
         </a>
     </section>
     <section class="section-hero mob">
         <div class="wrapper">
             <div>
                 <h1 class="title">Časovi nemačkog jezika preko skype-a i uživo</h1>
-                <img src="./assets/images/german-girl.svg" alt="Priprema za polaganje ispita na Gete institutu"
+                <img src="./assets/images/german-girl.svg" alt=""
                     width="2654.5" height="1729.6" class="img-mob img-girl" />
             </div>
             <div class="wrapper-item">
@@ -61,14 +61,14 @@
                 </h2>
                 <div class="contact-wrapper">
                     <div class="contact">
-                        <img src="./assets/images/icons/email.svg" alt="Časovi nemačkog jezika preko skype-a i uživo"
+                        <img src="./assets/images/icons/email.svg" alt=""
                             width="24" height="22" />
-                        <span class="contact-link"> ivanacvetkovic011@gmail.com</span>
+                        <span class="contact-link"> example@example.com</span>
                     </div>
                     <div class="contact">
-                        <img src="./assets/images/icons/phone.svg" alt="Priprema za ispit Gete,Telc,ÖSD,FSP" width="22"
+                        <img src="./assets/images/icons/phone.svg" alt="" width="22"
                             height="22" />
-                        <a href="#" class="contact-link"> 063 835 32 76</a>
+                        <a href="#" class="contact-link"> 060 000 00 00</a>
                     </div>
                 </div>
             </div>
@@ -78,18 +78,18 @@
         <h2 class="title">Nudimo vam</h2>
         <div class="explain-wrapper">
             <div class="explain-item">
-                <img src="./assets/images/germany.png" alt="ucenje nemackog jezika" width="32" height="32" />
+                <img src="./assets/images/germany.png" alt="" width="32" height="32" />
                 <p>
                     Priprema za polaganje ispita :<br />
                     - na Gete institutu (A1, A2, B1, B2, C1, konverzacija),<br />
                     - ispite ÖSD,<br />
                     - DaF,<br />
                     - Telc,<br />
-                    - Telc MedizinB1-B2
+                    - Telc Medizin B1-B2
                 </p>
             </div>
             <div class="explain-item">
-                <img src="./assets/images/book.svg" alt="ivana cvetkovic casovi nemackog" width="32" height="32" />
+                <img src="./assets/images/book.svg" alt="" width="32" height="32" />
                 <p>
                     Posebna paznja se posvećuje pripremi za 4 modula ispita, svaki modul se temeljno obradjuje i
                     uvežbava kroz
@@ -98,7 +98,7 @@
                 </p>
             </div>
             <div class="explain-item">
-                <img src="./assets/images/facetoface.svg" alt="casovi nemackog prkeo skype" width="32" height="32" />
+                <img src="./assets/images/facetoface.svg" alt="" width="32" height="32" />
 
                 <p>Knjige i dodatni materijal za ispite učenici dobijaju u elektronskoj formi.</p>
             </div>
@@ -120,12 +120,12 @@
             <div class="contact">
                 <img src="./assets/images/icons/email.svg" alt="Časovi nemačkog jezika preko skype-a i uživo" width="24"
                     height="22" />
-                <span class="contact-link"> ivanacvetkovic011@gmail.com</span>
+                <span class="contact-link"> example011@example.com</span>
             </div>
             <div class="contact">
-                <img src="./assets/images/icons/phone.svg" alt="Priprema za ispit Gete,Telc,ÖSD,FSP" width="22"
+                <img src="./assets/images/icons/phone.svg" alt="" width="22"
                     height="22" />
-                <a href="#" class="contact-link"> 063 835 32 76</a>
+                <a href="#" class="contact-link"> 060 000 00 00</a>
             </div>
         </div>
     </section>
