--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </h2>
                 <div class="contact-wrapper">
                     <div class="contact">
-                        <img src="./assets/images/icons/email.svg" alt="Časovi nemačkog jezika preko skype-a i uživo"
+                        <img src="./assets/images/icons/email.svg" alt=""
                             width="22" height="22" />
                         <span class="contact-link"> example@example.com</span>
                     </div>
